DOMjudge Programming Contest Judging System

Version 3.3.6 - DEV
-------------------
 - Fix 'Disable refresh' button not being clickable.

Version 3.3.5 - 16 April 2013
-----------------------------
 - Fix (theoretical) buffer underrun in submitdaemon.
 - In Java main method detection, allow it to be final.
 - Install locales in chroot, necessary for ghc solutions.
 - Also allow + character in filename regex.
 - Fix documentation typo's and HTML validity.
 - Stress better that disabling use_chroot is really not secure.
 - Fix PHP notice about unset HTTP_REFERER variable.
 - Fix bug that teampage_first_visit would be updated on each visit.

Version 3.3.4 - 21 January 2013
-------------------------------
 - Readd note for truncated file contents.
 - Correct mount bind option, see Debian bug #677815. Ported from
   WISVCH/DOMjudge tree at GitHub.
 - Bugfix: check that compilation creates executable file, closes: #119.
 - Fix minor HTML validation error and PHP notice.
 - Add missing $pagename in a few PHP/HTML pages.
 - Remove sharutils dependency.

Version 3.3.3 - 12 November 2012
--------------------------------
 - Fix bug: clarifications sent by jury member would display the recipient
   as 'All' (even though linked to one team). Thanks Mark Janssen.
 - Fix bug: CSS class missing in disabled balloon interfaces rows.
 - Fix bug: link to CSS colour names reference was broken.
 - Make Java class name detection compatible with Java 7.
 - Make Haskell example source compatible with newer GHC versions.
 - Add mapping to GeSHi highlighting to translate DOMjudge language
   ID's to their GeSHi counterparts.
 - Problem format spec: allow to include a problem statement text.
 - Add cascading delete on submitid to balloons table.
 - Install sudoers snippet. Thanks Heinrich Stamerjohanns.
 - Minor admin documentation improvements.

Version 3.3.2 - 2 September 2012
--------------------------------
 - Fix bug: change absolute time strings for those times which are specified